--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>اختبار القدرات اللفظي - النموذج الرابع</title>
+    <title>اختبار القدرات اللفظي - النموذج 19</title>
     <style>
         :root { --primary-color: #3f51b5; --secondary-color: #f39c12; --bg-color: #e8eaf6; --white: #ffffff; --correct-bg: #d4edda; --wrong-bg: #f8d7da; }
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: var(--bg-color); display: flex; justify-content: center; align-items: center; min-height: 100vh; margin: 0; padding: 20px; }
@@ -32,11 +32,11 @@
     <div class="header-info">
         <div style="font-weight: bold; color: var(--primary-color);">ثانوية الأمير عبدالمجيد</div>
         <div style="color: #7f8c8d;">أ / عبدالعزيز الفيفي</div>
-        <h1>اختبار القدرات - النموذج الرابع</h1>
+        <h1>اختبار القدرات - النموذج 19</h1>
     </div>
 
     <div id="start-page">
-        <p>مرحباً بك في تحدي التناظر اللفظي (النموذج 4)</p>
+        <p>مرحباً بك في تحدي التناظر اللفظي (النموذج 19)</p>
         <input type="text" id="studentName" placeholder="اكتب اسمك هنا لبدء التحدي...">
         <br>
         <button class="btn" onclick="startQuiz()">ابدأ التحدي</button>
